--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Porcentagem</title>
     <link rel="stylesheet" href="style.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3598990303506655"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <h1>Porcentagem</h1>
@@ -17,6 +19,41 @@
         </div>
         <h2 id="msg"></h2>
         <button id="botao">Resultado</button>
+    </div>
+
+    <div class="mais">
+        <h2 class="Curiosidade">Curiosidade Sobre a Porcentagem</h2>
+        <p> <span>Porcentagem: o que é e como surgiu</span>
+            <br>
+            Porcentagem é um conceito matemático que representa a divisão de um número qualquer por 100. A expressão 25%, por exemplo, significa que 25 partes de um todo foram divididas em 100 partes. O símbolo % é usado para indicar a porcentagem.
+            <br><br>
+            Mas você sabe como surgiu esse conceito e esse símbolo? Neste artigo, vamos contar um pouco da história da porcentagem e como ela se tornou tão importante na matemática e na vida cotidiana.
+            <br><br>
+            <span>A origem da porcentagem na Roma Antiga</span>
+            <br>   
+            Relatos históricos datam que o surgimento dos cálculos percentuais aconteceu por volta do século I a.C., na cidade de Roma. Nesse período, o imperador romano decretou inúmeros impostos a serem cobrados, de acordo com a mercadoria negociada. Um dos impostos criados pelos chefes romanos era denominado centésimo rerum venalium, e obrigava o comerciante a pagar um centésimo pela venda das mercadorias no mercado. Naquela época, o comércio de escravos era intenso e sobre as vendas era cobrado um imposto de 1/25 (um vinte e cinco avos).
+            <br><br>
+            Os cálculos eram feitos sem a utilização do símbolo de porcentagem, eram realizados de forma simples, com a utilização de frações centesimais. Por exemplo, na cobrança de um imposto no valor de 6/100 da comercialização, eles cobravam seis centésimos do preço do produto, isto é, dividiam o produto em cem partes iguais e pegavam seis partes, basicamente o que é feito hoje sem a utilização de calculadoras.
+            <br><br>
+            <span>A evolução da porcentagem na Idade Média</span>
+            <br>
+            A intensificação do comércio por volta do século XV criou situações de grande movimentação comercial. O surgimento dos juros, lucros e prejuízos obrigou os matemáticos a fixarem uma base para o cálculo de porcentagens. A base escolhida foi o 100. O interessante é que mesmo com essa evolução, o símbolo que conhecemos hoje ainda não era utilizado pelos comerciantes. Muitos documentos encontrados e registrados apresentam uma forma curiosa de expressar porcentagens. Os romanos utilizavam os algarismos do seu sistema de numeração seguido de siglas como, “p cento” e “p c”. Por exemplo, a porcentagem de 10% era escrita da seguinte forma: “X p cento” ou “X p c”.
+            <br><br>
+            Foi somente no século XVII que o símbolo % foi criado pelo matemático italiano Giovanni Bonaventura Cavalieri. Ele usou esse símbolo em seus livros para simplificar as expressões percentuais e facilitar os cálculos.
+            <br><br>
+            <span>A importância da porcentagem na atualidade</span>
+            <br>
+            Hoje em dia, a porcentagem é usada em diversas situações do nosso cotidiano, como em descontos, juros, taxas, gráficos, estatísticas e muito mais. Ela nos ajuda a comparar proporções e entender melhor os fenômenos que envolvem números.
+            <br><br>
+            Para calcular a porcentagem de um valor, basta multiplicá-lo pela fração correspondente à taxa percentual. Por exemplo, para calcular 20% de 500 reais, basta fazer:
+            <br><br>
+            20% de 500 = (20/100) x 500 = 0,2 x 500 = 100 reais
+            <br><br>
+            Para calcular qual é a taxa percentual entre dois valores, basta dividir a parte pelo todo e multiplicar por 100. Por exemplo, para calcular qual é a porcentagem de 80 alunos em uma turma de 200 alunos, basta fazer:
+            <br><br>
+            (80/200) x 100 = 0,4 x 100 = 40%
+            <br><br>
+            Portanto, podemos concluir que a porcentagem é um conceito que surgiu há muito tempo atrás e que se tornou essencial para a matemática e para a nossa vida. Esperamos que este artigo tenha sido útil para você aprender mais sobre esse assunto. Se você gostou, compartilhe com seus amigos.</p>
     </div>
 </body>
 <script src="index.js"></script>
